Version 1.4.3 (??/??/????) "Bronzeforge"
  * Fixed a couple of bugs that stopped the "Label Element" dialog from ensuring that 
    the label text field had focus when the dialog appears.

Version 1.4.2 (13/07/2006) "Ironforge"
  * Fixed a bug where the "Set Label" dialog box was remembering the last thing
    typed into it, and refusing to set the text of a new element if the newly
    typed text matched the the last stored memory.
  * Changed the default double-click behaviour on all net elements to be that of
    the label element dialog (rational being that control flow, and description
    of that flow for people, should be the first design task.   After the 
    flow has been sufficiently sketched out, decompositions, etc should be added in).
  * The ability to click on a composite task and have it's unfolding net appear 
    has thus needed shifting. Now, if the user holds down the <CTRL> key when left-clicking
    a composite task, the net it unfolds to will be brought to the front and given focus.
    If the composite task has no unfolding net yet, the dialog for selecting a net
    will appear instead.
  * There is now a new menu item avaiable from the "View" menu, allowing workflow
    designers to chose an alternate background colour for nets. This is useful for
    more easily visualising large/complex workflows.
  * Refactored some of the core graph behaviour used for mass-movement of net elements
    to simplify and speed up their movement.
  * Enhanced the printout and PNG export functionality to write the Specification
    ID and Net ID to the generated output image.
  * There are now a number of zoom options available from the menus and toolbar for
    changing the zoom level on nets. The "Resize Net" menu item has consequently been
    retired in favour of using zoom functionality to passively manage the overall net
    size.Included in this work is more intuitive management of resizinging a net when 